objects/Salesforce_Punch_to_Kronos__c/Salesforce_Punch_to_Kronos__c.object-meta.xml
<CustomObject>
    <label>Salesforce Punch to Kronos</label>
    <nameField>
        <displayFormat>SPK-{0000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Punch to Kronos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>