objects/Salesforce_Punch_to_Kronos__c/fields/Delete_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delete_Indicator__c</fullName>
    <label>Delete Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>