objects/Salesforce_Punch_to_Kronos__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>