objects/Salesforce_Punch_to_Kronos__c/fields/Employee_Clocked_Time_for_Kronos__c.field-meta.xml
<CustomField>
    <fullName>Employee_Clocked_Time_for_Kronos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Clocked Time for Kronos</label>
    <referenceTo>Employee_Clocked_Time_for_Kronos__c</referenceTo>
    <relationshipLabel>Salesforce Punch to Kronos</relationshipLabel>
    <relationshipName>Salesforce_Punch_to_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>