objects/Salesforce_Punch_to_Kronos__c/fields/Exported_At__c.field-meta.xml
<CustomField>
    <fullName>Exported_At__c</fullName>
    <label>Exported At</label>
    <type>DateTime</type>
</CustomField>