objects/Salesforce_Punch_to_Kronos__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>