objects/Salesforce_Punch_to_Kronos__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Salesforce Punch to Kronos</relationshipLabel>
    <relationshipName>Salesforce_Punch_to_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>