objects/Salesforce_Punch_to_Kronos__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>