objects/Salesforce_Punch_to_Kronos__c/fields/Time_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Text__c</fullName>
    <formula>Text(Time__c)</formula>
    <label>Time in Text</label>
    <type>Text</type>
</CustomField>