objects/Salesforce_Punch_to_Kronos__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>