objects/Salesforce_Punch_to_Kronos__c/fields/Time_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Type_Code__c</fullName>
    <label>Time Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>